--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@
   align-items: center;
 }
 
+.label {
+  color: blueviolet;
+}
+
+.label:hover {
+  font-size: larger;
+  color: lightcoral;
+}
+
 h2 {
   font-size: medium;
   font-weight: 200;
@@ -32,6 +41,7 @@ h2 {
 }
 
 .threevert {
+  height: 33.3%;
 }
 
 .threehoriz {
@@ -58,6 +68,17 @@ h2 {
 /* Colors */
 
 /* QUESTION 1 */
+.red {
+  background-color: red;
+}
+
+#white {
+  background-color: white;
+}
+
+.light-blue {
+  background-color: lightblue;
+}
 
 .orange {
   background-color: orange;
@@ -93,16 +114,22 @@ h2 {
 
 /* BEGIN QUESTION 2 */
 
+.sixthvert {
+  height: 16.67%;
+}
 .thailand-red {
   /* TODO */
+  background-color: #B5002D;
 }
 
 .thailand-white {
   /* TODO */
+  background-color: white;
 }
 
 .thailand-blue {
   /* TODO */
+  background-color: #2E2A4C;
 }
 
 /* END QUESTION 2 */
@@ -130,6 +157,11 @@ h2 {
 
 .mexico-img {
   /* TODO */
+  align-self: center;
+  max-height: 125px;
+  max-width: 125px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .mexico-red {
@@ -150,11 +182,13 @@ h2 {
 .flag1 {
   background-color: red;
   /* TODO */
+  margin-right: 5px;
 }
 
 .flag2 {
   background-color: blue;
   /* TODO */
+  margin-left: 5px;
 }
 /* For padding practice */
 .padding-container {
@@ -162,4 +196,5 @@ h2 {
   background-color: lightblue;
   background-clip: content-box, padding-box;
   /* TODO */
+  padding: 30px 30px 30px 30px;
 }
